# artery

scenarios/: CMakeLists.txt
scenarios/stelvio/: CMakeLists.txt  Makefile  README.md  crash_storyboard.py  empty_sensors.xml  omnetpp.ini  quickstart.sh  requirements.txt  static_nodes.xml  stelvio.net.xml  stelvio.rou.xml  stelvio.sumocfg  witness_storyboard.py
scenarios/stelvio/analysis/: analyze_results.py
scenarios/stelvio/analysis/csv/: summary_statistics.csv
scenarios/stelvio/config/: services_crashed.xml  services_infrastructure.xml  services_witness.xml
scenarios/stelvio/scripts/: export_csv.py  preflight_check.py  simulation_gui.py
scenarios/stelvio/src/: CrashedVehicleService.cc  CrashedVehicleService.h  CrashedVehicleService.ned  DenmMessage.msg  InfrastructureService.cc  InfrastructureService.h  InfrastructureService.ned  README.md  VehicleReceiverService.cc  VehicleReceiverService.h  VehicleReceiverService.ned  WitnessVehicleService.cc  WitnessVehicleService.h  WitnessVehicleService.ned  package.ned
